Z-Score normilisation on word usage

--- a/.gitignore
+++ b/.gitignore
@@ -86,3 +86,11 @@
 /internazionale.png
 /pixies.png
 /skrillex.png
+/#interday.png
+/vsday.png
+/skrillexday.png
+/internazionalerelated.png
+/internazionalefreq.png
+/internazionaleday.png
+/arctic monkeysday.png
+/AlcatrazTweets.png
