Final data analysis changes

--- a/.gitignore
+++ b/.gitignore
@@ -94,3 +94,20 @@
 /internazionaleday.png
 /arctic monkeysday.png
 /AlcatrazTweets.png
+/alcatraz.png
+/ajaxday.png
+/ac milanday.png
+/6556.png
+/2143.png
+/giuseppe meazzaday.png
+/genoaday.png
+/fiorentinaday.png
+/Weekend3.png
+/Weekday3.png
+/SanSiroCells.png
+/sampdoriaday.png
+/romaday.png
+/parmaday.png
+/Mediolanum Forum.png
+/loose_merge.csv
+/livornoday.png
