--- a/.gitignore
+++ b/.gitignore
@@ -111,3 +111,14 @@
 /Mediolanum Forum.png
 /loose_merge.csv
 /livornoday.png
+/bob dylanday.png
+/bastilleday.png
+/cellsserver.json
+/cellsall.json
+/centroid_pattern.json
+/centroidsall.json
+/center.png
+/NNeventsInternetSanSiro.html
+/NNeventsCensus.html
+/NNeventsAlternate.html
+/landuseclassificationinternet.html
