--- a/.gitignore
+++ b/.gitignore
@@ -122,3 +122,8 @@
 /NNeventsCensus.html
 /NNeventsAlternate.html
 /landuseclassificationinternet.html
+/sexhibitionresults.png
+/sansiroresults.png
+/sansiro.png
+/distributionresults.png
+/Centroids.png
